@@ -125,7 +125,7 @@ public class FileSystemModule implements Module {
 			final Path cwd = state.getCwd();
 			final Path dir;
 			if (args.size() == 1) {
-				dir = resolveAsAbsolutePath(state.getCwd(), Path.of(args.get(0)));
+				dir = resolveAsAbsolutePath(state.getCwd(), Path.of(args.getFirst()));
 			} else {
 				dir = cwd;
 			}
@@ -205,7 +205,7 @@ public class FileSystemModule implements Module {
 				err.send(Errors.usage("cd directory"));
 				return ExitStatus.error();
 			}
-			Path newCwd = resolveAsAbsolutePath(state.getCwd(), Path.of(args.get(0)));
+			Path newCwd = resolveAsAbsolutePath(state.getCwd(), Path.of(args.getFirst()));
 			if (!Files.isDirectory(newCwd)) {
 				err.send(Errors.message("not a directory"));
 				return ExitStatus.error();
@@ -234,7 +234,7 @@ public class FileSystemModule implements Module {
 				err.send(Errors.usage("lines file"));
 				return ExitStatus.error();
 			}
-			Path source = resolveAsAbsolutePath(state.getCwd(), Path.of(args.get(0)));
+			Path source = resolveAsAbsolutePath(state.getCwd(), Path.of(args.getFirst()));
 			if (!Files.isRegularFile(source)) {
 				err.send(Errors.message("not readable file"));
 				return ExitStatus.error();
@@ -269,7 +269,7 @@ public class FileSystemModule implements Module {
 				return ExitStatus.error();
 			}
 			try {
-				Path target = followSymlinksRecursively(resolveAsAbsolutePath(state.getCwd(), Path.of(args.get(0))));
+				Path target = followSymlinksRecursively(resolveAsAbsolutePath(state.getCwd(), Path.of(args.getFirst())));
 				if (!Files.exists(target)) {
 					err.send(Errors.message("not found"));
 					return ExitStatus.error();
@@ -346,7 +346,7 @@ public class FileSystemModule implements Module {
 				err.send(Errors.usage("glob pattern"));
 				return ExitStatus.error();
 			}
-			String pattern = args.get(0);
+			String pattern = args.getFirst();
 			PathMatcher pathMatcher = state.getCwd().getFileSystem().getPathMatcher("glob:" + pattern);
 			for (Record record : InputChannel.iterate(in)) {
 				record.value(Keys.PATH)
@@ -380,7 +380,7 @@ public class FileSystemModule implements Module {
 				err.send(Errors.usage("cp file file"));
 				return ExitStatus.error();
 			}
-			Path source = resolveAsAbsolutePath(state.getCwd(), Path.of(args.get(0)));
+			Path source = resolveAsAbsolutePath(state.getCwd(), Path.of(args.getFirst()));
 			Path target = resolveAsAbsolutePath(state.getCwd(), Path.of(args.get(1)));
 			try {
 				Files.copy(source, target);
@@ -412,7 +412,7 @@ public class FileSystemModule implements Module {
 				err.send(Errors.usage("mv file file"));
 				return ExitStatus.error();
 			}
-			Path source = resolveAsAbsolutePath(state.getCwd(), Path.of(args.get(0)));
+			Path source = resolveAsAbsolutePath(state.getCwd(), Path.of(args.getFirst()));
 			Path target = resolveAsAbsolutePath(state.getCwd(), Path.of(args.get(1)));
 			try {
 				Files.move(source, target);
@@ -443,7 +443,7 @@ public class FileSystemModule implements Module {
 				err.send(Errors.usage("rm file"));
 				return ExitStatus.error();
 			}
-			Path target = resolveAsAbsolutePath(state.getCwd(), Path.of(args.get(0)));
+			Path target = resolveAsAbsolutePath(state.getCwd(), Path.of(args.getFirst()));
 			try {
 				Files.delete(target);
 				return ExitStatus.success();
@@ -507,7 +507,7 @@ public class FileSystemModule implements Module {
 				err.send(Errors.usage("probe file"));
 				return ExitStatus.error();
 			}
-			Path file = resolveAsAbsolutePath(state.getCwd(), Path.of(args.get(0)));
+			Path file = resolveAsAbsolutePath(state.getCwd(), Path.of(args.getFirst()));
 			try {
 				String contentType = Files.probeContentType(file);
 				if (contentType == null) {
@@ -541,7 +541,7 @@ public class FileSystemModule implements Module {
 				err.send(Errors.usage("symlink source target"));
 				return ExitStatus.error();
 			}
-			Path source = resolveAsAbsolutePath(state.getCwd(), Path.of(args.get(0)));
+			Path source = resolveAsAbsolutePath(state.getCwd(), Path.of(args.getFirst()));
 			Path target = resolveAsAbsolutePath(state.getCwd(), Path.of(args.get(1)));
 			try {
 				Files.createSymbolicLink(target, source);
@@ -571,7 +571,7 @@ public class FileSystemModule implements Module {
 				err.send(Errors.usage("hardlink source target"));
 				return ExitStatus.error();
 			}
-			Path source = resolveAsAbsolutePath(state.getCwd(), Path.of(args.get(0)));
+			Path source = resolveAsAbsolutePath(state.getCwd(), Path.of(args.getFirst()));
 			Path target = resolveAsAbsolutePath(state.getCwd(), Path.of(args.get(1)));
 			try {
 				Files.createLink(target, source);
@@ -603,7 +603,7 @@ public class FileSystemModule implements Module {
 				return ExitStatus.error();
 			}
 			try {
-				Path unresolved = Path.of(args.get(0));
+				Path unresolved = Path.of(args.getFirst());
 				Path partiallyResolved = resolveAsAbsolutePath(state.getCwd(), unresolved);
 				Path resolved = partiallyResolved.toRealPath();
 				out.send(Records.singleton(Keys.PATH, Values.ofPath(resolved)));
@@ -641,7 +641,7 @@ public class FileSystemModule implements Module {
 				err.send(Errors.usage("watch directory"));
 				return ExitStatus.error();
 			}
-			Path dir = state.getCwd().resolve(args.get(0));
+			Path dir = state.getCwd().resolve(args.getFirst());
 			WatchEvent.Kind<?>[] events = {
 					StandardWatchEventKinds.ENTRY_CREATE,
 					StandardWatchEventKinds.ENTRY_DELETE,
@@ -719,7 +719,7 @@ public class FileSystemModule implements Module {
 				err.send(Errors.usage("withLock file { ... }"));
 				return ExitStatus.error();
 			}
-			Path path = resolveAsAbsolutePath(state.getCwd(), Path.of(args.get(0)));
+			Path path = resolveAsAbsolutePath(state.getCwd(), Path.of(args.getFirst()));
 			RandomAccessFile randomAccessFile = null;
 			try {
 				randomAccessFile = new RandomAccessFile(path.toFile(), "rw");
